--- a/manifest.json
+++ b/manifest.json
@@ -9,13 +9,23 @@
     "description": "The collection of serverless utilities",
     "icons": [
         {
-            "src": "images/icon-256x256.png",
+            "src": "images/256.png",
             "sizes": "256x256",
             "type": "image/png"
         },
         {
-            "src": "images/icon-512x512.png",
+            "src": "images/512.png",
             "sizes": "512x512",
+            "type": "image/png"
+        },
+        {
+            "src": "images/192.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "images/144.png",
+            "sizes": "144x144",
             "type": "image/png"
         }
     ]
