--- a/manifest.json
+++ b/manifest.json
@@ -27,6 +27,21 @@
             "src": "images/144.png",
             "sizes": "144x144",
             "type": "image/png"
+        },
+        {
+            "src": "images/48.png",
+            "sizes": "48x48",
+            "type": "image/png"
+        },
+        {
+            "src": "images/72.png",
+            "sizes": "72x72",
+            "type": "image/png"
+        },
+        {
+            "src": "images/96.png",
+            "sizes": "96x96",
+            "type": "image/png"
         }
     ]
 }
