--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-minimal
 title: milkov
 description: Bookmark this to keep an eye on my project updates!
+repository: MDcod/mdcod.github.io
