--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.45.0",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
+    "@supabase/supabase-js": "^2.55.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
